#8 테스트 결과 멀티 모듈 가능하도록 수정

--- a/.github/workflows/detekt.yml
+++ b/.github/workflows/detekt.yml
@@ -44,4 +44,6 @@ jobs:
         uses: EnricoMi/publish-unit-test-result-action@v1
         if: ${{ always() }}
         with:
-          files: module-user/build/test-results/**/*.xml
+          files: |
+            module-user/build/test-results/**/*.xml
+            module-core/build/test-results/**/*.xml
