--- a/module-api/src/main/resources/application.yml
+++ b/module-api/src/main/resources/application.yml
@@ -1,5 +1,16 @@
 spring:
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://27.96.135.97:3306/twitch_clone?serverTimezone=Asia/Seoul
+    url: jdbc:mysql://27.96.135.97:3306/twitch_clone?useSSL=false&serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8
     username: user
+
+  jpa:
+    hibernate:
+      ddl-auto: none
+
+    show-sql: true
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+    open-in-view: false
+    properties:
+      default_batch_fetch_size: 100
+      hibernate:
+        format_sql: true
